--- a/MameToppleApi/MameVue/src/assets/css/gameboard.css
+++ b/MameToppleApi/MameVue/src/assets/css/gameboard.css
@@ -1,3 +1,8 @@
+* {
+  -moz-user-select: none;
+  -webkit-user-select: none;
+}
+
 .game-bg {
   position: relative;
 }
@@ -14,7 +19,7 @@
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  opacity: 0.2;
+  opacity: 0.1;
   z-index: -1;
 }
 
@@ -96,10 +101,49 @@
   padding: 100px 0;
 }
 
-.center-content .game-board .topple-list {
+.center-content .game-board .mame-line {
   width: 100%;
   height: 60px;
   background-color: rgba(255, 220, 175, 0.315);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+}
+
+.center-content .game-board .mame-line .mame-tiki {
+  width: calc(100%/8);
+  height: 100%;
+  border-radius: 3px;
+}
+
+.center-content .game-board .mame-line .mame-tiki-1 {
+  /* Chrome 10-25, Safari 5.1-6 */
+  background: -webkit-gradient(linear, left top, left bottom, from(#ffb8c0), to(#ee9ca7));
+  background: linear-gradient(to bottom, #ffb8c0, #ee9ca7);
+  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
+
+.center-content .game-board .mame-line .mame-tiki-2 {
+  background-color: #ffc4769f;
+  background: #EDE574;
+  /* fallback for old browsers */
+  /* Chrome 10-25, Safari 5.1-6 */
+  background: -webkit-gradient(linear, left top, left bottom, from(#f0f5c4), to(#fff89c));
+  background: linear-gradient(to bottom, #f0f5c4, #fff89c);
+  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
+
+.center-content .game-board .mame-line .mame-tiki-3 {
+  /* Chrome 10-25, Safari 5.1-6 */
+  background: -webkit-gradient(linear, left top, left bottom, from(#bfffc89f), to(#99ffa69f));
+  background: linear-gradient(to bottom, #bfffc89f, #99ffa69f);
+  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
 .center-content .location-bottom {
@@ -142,6 +186,21 @@
   background-size: cover;
   -webkit-filter: drop-shadow(8px 8px 5px rgba(0, 0, 0, 0.3));
           filter: drop-shadow(8px 8px 5px rgba(0, 0, 0, 0.3));
+  -webkit-transition: .3s;
+  transition: .3s;
+}
+
+.center-content .location-bottom .mame-card:hover:after {
+  position: absolute;
+  border: 1px solid #ffef91;
+  -webkit-box-shadow: 0 0 5px 5px #ffee8bbb;
+          box-shadow: 0 0 5px 5px #ffee8bbb;
+  -webkit-filter: drop-shadow(6px 7px 4px rgba(0, 0, 0, 0.3));
+          filter: drop-shadow(6px 7px 4px rgba(0, 0, 0, 0.3));
+  width: 110%;
+  height: 110%;
+  top: -30px;
+  left: 10px;
 }
 
 .location-left {
