--- a/MameToppleApi/MameVue/src/assets/css/gameboard.scss
+++ b/MameToppleApi/MameVue/src/assets/css/gameboard.scss
@@ -1,3 +1,7 @@
+*{
+    -moz-user-select: none; 
+    -webkit-user-select: none; 
+}
 .game-bg{ 
     position: relative;
     &:after{
@@ -12,7 +16,7 @@
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
-        opacity : 0.2;
+        opacity : 0.1;
         z-index: -1;    
     }
 }
@@ -28,9 +32,6 @@
         background-repeat: no-repeat;
     }
 
-    .players{
-        // display
-    }
 }
 .user-icon{
     width: 178px;
@@ -70,10 +71,38 @@
         flex-direction: column;
         justify-content: center;
         padding: 100px 0;
-        .topple-list{
+        .mame-line{
             width:100%;
             height: 60px;
             background-color: rgba(255, 220, 175, 0.315);
+
+            display: flex;
+            align-items: center;
+            justify-content: flex-end;
+            .mame-tiki{
+                width: calc(100%/8);
+                height: 100%;
+                border-radius: 3px;
+            }
+            .mame-tiki-1{
+                // background-color: rgba(140, 232, 255, 0.623);#E85D2D);
+                // background: #ee9ca7;  /* fallback for old browsers */
+                background: -webkit-linear-gradient(to bottom, #ffb8c0, #ee9ca7);  /* Chrome 10-25, Safari 5.1-6 */
+                background: linear-gradient(to bottom, #ffb8c0, #ee9ca7); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+            }
+            .mame-tiki-2{
+                background-color: #ffc4769f;
+                background: #EDE574;  /* fallback for old browsers */
+                background: -webkit-linear-gradient(to bottom, #f0f5c4, #fff89c);  /* Chrome 10-25, Safari 5.1-6 */
+                background: linear-gradient(to bottom, #f0f5c4, #fff89c); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+                
+            }
+            .mame-tiki-3{
+                // background-color: #99ffa69f;
+                background: -webkit-linear-gradient(to bottom, #bfffc89f, #99ffa69f);  /* Chrome 10-25, Safari 5.1-6 */
+                background: linear-gradient(to bottom, #bfffc89f, #99ffa69f); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+                
+            }
         }
     }
     .location-bottom{
@@ -107,8 +136,24 @@
                 background-position: center;
                 background-repeat: no-repeat;
                 background-size: cover;
-                filter: drop-shadow(8px 8px 5px rgba(0, 0, 0, 0.3))
+                filter: drop-shadow(8px 8px 5px rgba(0, 0, 0, 0.3));
+                
+                transition: .3s;
             }
+            &:hover:after{
+                position: absolute;
+
+                border: 1px solid #ffef91;
+                // box-shadow: 0 0 0 5px #ffee8b9d;
+                box-shadow: 0 0 5px 5px #ffee8bbb;
+                filter: drop-shadow(6px 7px 4px rgba(0, 0, 0, 0.3));
+
+                width: 110%;
+                height: 110%;
+                top: -30px;
+                left: 10px;
+            }
+            
         }
     }   
 }
