--- a/MameToppleApi/MameVue/src/assets/css/gameboard.css
+++ b/MameToppleApi/MameVue/src/assets/css/gameboard.css
@@ -177,12 +177,22 @@
 }
 
 .center-content .game-board .mame-line .mame-tiki {
-  width: calc(100%/8);
   height: 100%;
   border-radius: 3px;
+  margin: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .center-content .game-board .mame-line .mame-tiki-1 {
+  margin: 0;
   /* Chrome 10-25, Safari 5.1-6 */
   background: -webkit-gradient(linear, left top, left bottom, from(#ffb8c0), to(#ee9ca7));
   background: linear-gradient(to bottom, #ffb8c0, #ee9ca7);
@@ -247,8 +257,6 @@
   height: 100%;
   -webkit-transform-style: preserve-3d;
           transform-style: preserve-3d;
-  -webkit-animation-delay: 2s;
-          animation-delay: 2s;
   -webkit-animation: rotate-inverse 0.6s 1s linear both;
           animation: rotate-inverse 0.6s 1s linear both;
   margin-left: 10px;
@@ -272,7 +280,7 @@
   display: block;
   position: absolute;
   bottom: 0;
-  background-image: url("../images/mamegoma_UP.png");
+  background-image: url("../images/Mamegoma_up_1.png");
   border-radius: 10px;
   width: 100%;
   height: 100%;
@@ -370,4 +378,4 @@
   width: 150px;
   height: 70%;
 }
-/*# sourceMappingURL=GameBoard.css.map */
+/*# sourceMappingURL=gameboard.css.map */
