--- a/MameToppleApi/MameVue/src/assets/css/Ranking/style.scss
+++ b/MameToppleApi/MameVue/src/assets/css/Ranking/style.scss
@@ -73,7 +73,7 @@ body {
                         height: 100%;
                     }
                 }
-                .player-card{
+                .mission-card{
 
                     width: 16vw;
                     height: 20vw;
